--- a/yatube/templates/includes/content.html
+++ b/yatube/templates/includes/content.html
@@ -1,13 +1,18 @@
 {% load static %}
+{% load thumbnail %}
 <ul>
   <li>
+
     Автор: {{ post.author.get_full_name }}
     <a href={% url 'posts:profile' post.author %}>все записи пользователя</a>
   </li>
     <li>
-      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      Дата публикации: {{ post.created|date:"d E Y" }}
     </li>
-  </ul>      
+  </ul>
+  {% thumbnail post.image "260" crop="center" upscale=True as im %}
+  <img  class="cared-img my-2"  src="{{ im.url }}" >
+  {% endthumbnail %}
   <p>
     {{ post.text }}
   </p>
@@ -15,7 +20,10 @@
   <br>
   {% if post.group and not group %}
   <a href="{% url 'posts:second' post.group.slug %}">все записи сообщества</a>
+
   {% endif %}
   {% if not forloop.last %}
   <hr>
   {% endif %} 
+
+  
