--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %} Пост {{ post_title|truncatechars:30 }}{% endblock %}
 {% block content %}
   <main>
@@ -7,7 +8,7 @@
         <aside class="col-12 col-md-3">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              Дата публикации: {{ pub_date|date:"d E Y" }}
+              Дата публикации: {{ post.created|date:"d E Y" }}
             </li>
             {% if post.group %}
             <li class="list-group-item">
@@ -31,10 +32,13 @@
           </ul>
         </aside>
         <article class="col-12 col-md-9">
-          
+          {% thumbnail post.image "x800" crop="center" upscale=True as im %}
+            <img class="cared-img my-2" src="{{ im.url }}">
+          {% endthumbnail %}
           <p>
           {{ post.text }}
           </p>
+          {% include 'posts/includes/comment.html' %}
         </article>
       </div>
     </div>
